example/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ldapadmin
  labels:
    app: ldapadmin
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: ldapadmin
